# telegram-web3-service

./: .gitignore  Cargo.toml
services/telegram-bot-service/: Cargo.toml
services/telegram-bot-service/src/: config.rs  main.rs
services/telegram-bot-service/src/db/: connection.rs
services/web-services/: Cargo.toml
services/web-services/src/: lib.rs
