[workspace]

members = ["services/telegram-bot-service", "services/web-services"]
resolver = "3"

[workspace.dependencies]

tokio = { version = "1.50", features = ["macros", "rt-multi-thread"] }

axum = { version = "0.8", features = ["json", "macros"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6", features = ["trace"] }
