[package]
name = "telegram-bot-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["full"] }

teloxide = { version = "0.17", features = ["full"] }

dotenvy = {version = "0.15"}

chrono = "0.4"

uuid = "1.22"
sqlx = {version = "0.8", features = ["uuid", "chrono", "postgres", "runtime-tokio", "macros", "tls-native-tls"]}
anyhow = "1.0"
serde = {version ="1.0", features = ["derive"]}
serde_json = "1.0"
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true
